--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,13 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+
+        <a href="https://slack.com/oauth/authorize?client_id=14390917878.401235455793&scope=bot,users.profile:read&redirect_uri=https%3a%2f%2feba.ibm.com%2fslack%2foauth">
+          <img alt="Add to Slack" height="40" width="139"
+               src="https://platform.slack-edge.com/img/add_to_slack.png"
+               srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" />
+        </a>
+
       </header>
       <section>
 
