--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,5 +69,6 @@
       ga('send', 'pageview');
     </script>
     {% endif %}
+    <script src="https://eba.ibm.com/static/assistant.js"></script>
   </body>
 </html>
