--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,5 +70,11 @@
     </script>
     {% endif %}
     <script src="https://eba.ibm.com/static/assistant.js"></script>
+    <script>
+      IBM_EBA.setup({
+        disable_button: false,
+        disable_shadow: true
+      })
+    </script>
   </body>
 </html>
