--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,3 +12,6 @@ img[src*="zoom=50%"] {
   display: block;
   clear: both;
 }
+#eba-button.eba-button {
+  background-color: rgb(76,119,184)!important;
+}
