--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,16 @@
                  srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" />
           </a>
         </p>
+        
+        <ul class="index">
+          <li data-level="0"><a gref="/docs/articles/NaturalLanguageUnderstatnding.html">Natural language understanding</a></li>
+          <li data-level="0"><a href="/docs/LandingPage.html">Programming Watson Assistant</a></li>
+          <li data-level="1"><a href="/docs/components/Ontology.html">Ontology</a></li>
+          <li data-level="1"><a href="/docs/components/Patterns.html">Patterns</a></li>
+          <li data-level="1"><a href="/docs/components/Actions.html">Actions</a></li>
+          <li data-level="1"><a href="/docs/components/Rules.html">Rules</a></li>
+          <li data-level="0"><a href="/docs/articles/DebuggingWatsonAssistant.html">Debugging Watson Assistant</a></li>
+        </ul>
 
       </header>
       <section>
