--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,4 +24,11 @@ header ul.index {
   height: initial;
   border: none;
   border-radius: 0;
+  li {
+    width: initial;
+    height: initial;
+    float: none;
+    border: none;
+    border-radius: 0;
+  }
 }
