--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
         </p>
         
         <ul class="index">
-          <li data-level="0"><a gref="/docs/articles/NaturalLanguageUnderstatnding.html">Natural language understanding</a></li>
+          <li data-level="0"><a href="/docs/articles/NaturalLanguageUnderstatnding.html">Natural language understanding</a></li>
           <li data-level="0"><a href="/docs/LandingPage.html">Programming Watson Assistant</a></li>
           <li data-level="1"><a href="/docs/components/Ontology.html">Ontology</a></li>
           <li data-level="1"><a href="/docs/components/Patterns.html">Patterns</a></li>
