--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,7 @@
         </p>
         
         <ul class="index">
+          <li data-level="0"><a href="/docs/Samples.html">Sample agents</a></li>
           <li data-level="0"><a href="/docs/articles/NaturalLanguageUnderstatnding.html">Natural language understanding</a></li>
           <li data-level="0"><a href="/docs/LandingPage.html">Programming Watson Assistant</a></li>
           <li data-level="1"><a href="/docs/components/Ontology.html">Ontology</a></li>
