--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
           <li data-level="1"><a href="/docs/components/Actions.html">Actions</a></li>
           <li data-level="1"><a href="/docs/components/Rules.html">Rules</a></li>
           <li data-level="0"><a href="/docs/articles/DebuggingWatsonAssistant.html">Debugging Watson Assistant</a></li>
-          <li data-level="0"><a href="/docs/Samples.html">Sample agents</a></li>
+          <li data-level="0"><a href="/docs/Samples.html">Example agents</a></li>
         </ul>
 
       </header>
