--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,5 +73,6 @@
         disable_shadow: true
       })
     </script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js" defer></script>
   </body>
 </html>
