--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,9 @@
                  src="https://platform.slack-edge.com/img/add_to_slack.png"
                  srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" />
           </a>
+          <a class="btn-download" href="https://ibm.box.com/shared/static/m7wm02x2qdevpacf2u1ugj6koapr37ta.dmg">
+            Download for Mac
+          </a>
         </p>
         
         <ul class="index">
