--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -57,3 +57,16 @@ header ul.index {
     }
   }
 }
+a.btn-download {
+  line-height: 40px;
+  display: inline-block;
+  vertical-align: top;
+  background-color: rgb(94,160,81);
+  color: white;
+  width: 139px;
+  text-align: center;
+  border-radius: 6px;
+  &:hover, &:focus {
+    font-size: normal;
+  }
+}
