--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -67,6 +67,6 @@ a.btn-download {
   text-align: center;
   border-radius: 6px;
   &:hover, &:focus {
-    font-size: normal;
+    font-weight: normal;
   }
 }
