--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,7 +61,7 @@ a.btn-download {
   line-height: 40px;
   display: inline-block;
   vertical-align: top;
-  background-color: rgb(85,119,179);
+  background-color: lighten(rgb(85,119,179), 20%);
   color: white;
   width: 139px;
   text-align: center;
