--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -58,14 +58,13 @@ header ul.index {
   }
 }
 a.btn-download {
-  line-height: 40px;
-  display: inline-block;
-  vertical-align: top;
-  background-color: lighten(rgb(85,119,179), 10%);
-  color: white;
-  width: 139px;
-  text-align: center;
-  border-radius: 6px;
+    line-height: 40px;
+    display: inline-block;
+    vertical-align: top;
+    border: 1px solid #7893c3;
+    width: 137px;
+    text-align: center;
+    border-radius: 6px;
   &:hover, &:focus {
     font-weight: normal;
   }
