--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -67,6 +67,7 @@ a.btn-download {
     border-radius: 6px;
   &:hover, &:focus {
     font-weight: normal;
+    background-color: lighten(#7893c3, 50%);
   }
 }
 p.buttons {
