--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="XO_qayYZVXAIfFgvqdKTUeol4juG_oBy3yhI0-Y8nC0" />
     <meta name="slack-app-id" content="ABT6XDDPB">
 
 {% seo %}
