--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,9 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <p class="buttons">
+           <a class="btn-launch" href="https://eba.ibm.com">
+            Launch EBA
+          </a>
           <a href="https://slack.com/oauth/authorize?client_id=14390917878.401235455793&scope=bot,users.profile:read&redirect_uri=https%3a%2f%2feba.ibm.com%2fslack%2foauth">
             <img alt="Add to Slack" height="40" width="139"
                  src="https://platform.slack-edge.com/img/add_to_slack.png"
