--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,13 +39,14 @@
         </p>
         
         <ul class="index">
-          <li data-level="0"><a href="/docs/articles/NaturalLanguageUnderstatnding.html">Natural language understanding</a></li>
+          <li data-level="0"><a href="/docs/getting-started/GettingStarted.html">Getting started</a></li>
           <li data-level="0"><a href="/docs/LandingPage.html">Programming Watson Assistant</a></li>
 <!--           <li data-level="1"><a href="/docs/components/Ontology.html">Ontology</a></li> -->
 <!--           <li data-level="1"><a href="/docs/components/Patterns.html">Patterns</a></li> -->
 <!--           <li data-level="1"><a href="/docs/components/Actions.html">Actions</a></li> -->
 <!--           <li data-level="1"><a href="/docs/components/Rules.html">Rules</a></li> -->
           <li data-level="0"><a href="/docs/articles/DebuggingWatsonAssistant.html">Debugging Watson Assistant</a></li>
+          <li data-level="0"><a href="/docs/articles/NaturalLanguageUnderstatnding.html">Natural language understanding</a></li>
           <li data-level="0"><a href="/docs/Samples.html">Example agents</a></li>
         </ul>
 
