--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 
         <p class="buttons">
           <a class="btn-launch" href="https://eba.ibm.com">
-            Launch EBA
+            Launch in Web
           </a>
           <a class="btn-download" href="https://ibm.box.com/shared/static/m7wm02x2qdevpacf2u1ugj6koapr37ta.dmg">
             Download for Mac
