--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,6 +81,7 @@
         disable_shadow: true
       })
     </script>
+    <script src="{{ "/assets/js/youtube.js?v=" | append: site.github.build_revision | relative_url }}"></script>
     <!--script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js" defer></script-->
   </body>
 </html>
