--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11089,9 +11089,11 @@ a {
     width: calc(100% - 270px - 30px);
     padding: 30px;
     margin-right: 30px;
-    padding-right: calc(100% - 270px - 800px - 30px); }
+    padding-right: calc(100% - 270px - 800px); }
     .wrapper section > h2 {
       margin-top: 0; }
+    .wrapper section img {
+      max-width: 100%; }
   .wrapper:after {
     content: "";
     display: block;
