--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,12 +28,13 @@ a {
       font-family: "Helvetica Neue Roman for IBM", Helvetica, Arial, sans-serif;
       font-weight: 400;
       font-size: 26px;
-      line-height: 30px;
-      color: white; }
+      line-height: 30px; }
       .wrapper header h1 a {
         text-decoration: none; }
-    .wrapper header h1:first-child, .wrapper header h2:first-child, .wrapper header h3:first-child, .wrapper header h4:first-child {
-      margin-top: 0; }
+    .wrapper header h1, .wrapper header h2, .wrapper header h3, .wrapper header h4 {
+      color: white; }
+      .wrapper header h1:first-child, .wrapper header h2:first-child, .wrapper header h3:first-child, .wrapper header h4:first-child {
+        margin-top: 0; }
     .wrapper header .buttons {
       display: flex;
       flex-direction: row;
