--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,6 @@
 /*
  * end
  **/
-* {
-  box-sizing: border-box; }
-
 a {
   text-decoration: underline; }
 
@@ -121,11 +118,22 @@ a {
     content: "";
     display: block;
     clear: both; }
-  @media (max-width: 800px) {
+
+@media (max-width: 800px) {
+  html, body {
+    height: 100%; }
+
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%; }
     .wrapper header, .wrapper footer, .wrapper section {
+      width: 100%;
+      height: auto;
       float: none;
-      position: relative;
-      width: 100%; }
+      position: relative; }
+    .wrapper section {
+      flex-grow: 1; }
     .wrapper header {
       padding: 20px; }
       .wrapper header h1 {
@@ -133,7 +141,8 @@ a {
         line-height: 24px; }
         .wrapper header h1 button {
           display: block;
-          margin-left: 15px; }
+          margin-left: 15px;
+          height: 24px; }
           .wrapper header h1 button svg {
             width: 24px;
             height: 24px; }
@@ -143,6 +152,8 @@ a {
       .wrapper header:not(.opened) > *:first-child {
         margin-bottom: 0; }
       .wrapper header:not(.opened) > *:not(:first-child) {
+        display: none; }
+      .wrapper header .buttons {
         display: none; }
     .wrapper section {
       padding: 20px; } }
