--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,13 +92,14 @@
       ga('send', 'pageview');
     </script>
     {% endif %}
-    <script src="https://eba.ibm.com/static/assistant.js"></script>
     <script>
-      IBM_EBA.setup({
+      IBM_EBA_CONFIG = {
+        loading_delay: 1000,
         disable_button: false,
         disable_shadow: true
-      })
+      }
     </script>
+    <script src="https://eba.ibm.com/static/assistant.js" defer></script>
     <!--script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js" defer></script-->
   </body>
 </html>
