--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,105 +1,177 @@
-<!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="google-site-verification" content="XO_qayYZVXAIfFgvqdKTUeol4juG_oBy3yhI0-Y8nC0" />
-    <meta name="slack-app-id" content="ABT6XDDPB">
+/**
+ * @todo deprecate these eventuallyyyyyy
+ */
+/*
+ * end
+ **/
+a {
+  text-decoration: underline; }
 
-{% seo %}
-    <link rel="stylesheet" href="{{ "/assets/css/x1-ui-bootstrap.css?v=" | append: site.github.build_revision | relative_url }}">
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-    <!--[if lt IE 9]>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>
-          <button class="btn btn-link" style="float:right" onclick="javascript:document.getElementsByTagName('header')[0].classList.toggle('opened')">
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-               width="30px" height="30px" viewBox="0 0 30 30" style="enable-background:new 0 0 30 30;" xml:space="preserve">
-            <style type="text/css">
-              .st0{fill:white;}
-            </style>
-            <g>
-              <rect x="2" y="4" class="st0" width="26" height="5"/>
-              <rect x="2" y="13" class="st0" width="26" height="5"/>
-              <rect x="2" y="22" class="st0" width="26" height="5"/>
-            </g>
-            </svg>
-          </button>
-          <a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a>
-        </h1>
-        
-        {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
-        {% endif %}
+.wrapper {
+  font-family: "Helvetica Neue for IBM", Helvetica, Arial, sans-serif;
+  font-weight: 300; }
+  .wrapper header, .wrapper footer {
+    background-color: #325C80;
+    color: #ECF2F2;
+    float: left;
+    position: fixed;
+    width: 270px;
+    padding: 20px; }
+    .wrapper header a, .wrapper footer a {
+      color: white; }
+  .wrapper header {
+    height: 100%; }
+    .wrapper header h1 {
+      font-family: "Helvetica Neue Roman for IBM", Helvetica, Arial, sans-serif;
+      font-weight: 400;
+      font-size: 26px;
+      line-height: 30px; }
+      .wrapper header h1 a {
+        text-decoration: none; }
+      .wrapper header h1 button {
+        display: none; }
+    .wrapper header h2 {
+      margin-top: 10px;
+      margin-bottom: 10px; }
+    .wrapper header h1, .wrapper header h2, .wrapper header h3, .wrapper header h4 {
+      color: white; }
+      .wrapper header h1:first-child, .wrapper header h2:first-child, .wrapper header h3:first-child, .wrapper header h4:first-child {
+        margin-top: 0; }
+    .wrapper header .buttons {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-top: 20px;
+      margin-right: -10px;
+      margin-bottom: 10px; }
+      .wrapper header .buttons > * {
+        margin-right: 10px;
+        margin-bottom: 10px; }
+      .wrapper header .buttons a {
+        text-decoration: none;
+        border: 1px solid white;
+        border-radius: 0px;
+        display: inline-block;
+        height: 30px;
+        line-height: 28px;
+        width: 140px;
+        text-align: center;
+        vertical-align: top; }
+        .wrapper header .buttons a:hover {
+          background-color: #4178BE; }
+        .wrapper header .buttons a svg {
+          width: 28px;
+          height: 28px;
+          padding: 4px;
+          display: inline-block;
+          vertical-align: top; }
+        .wrapper header .buttons a.btn-slack {
+          font-family: "Helvetica Neue Roman for IBM", Helvetica, Arial, sans-serif;
+          font-weight: 400;
+          background-color: #FBFCFC;
+          color: #464646; }
+          .wrapper header .buttons a.btn-slack:hover {
+            background-color: #F0F2F4; }
+    .wrapper header ul.index {
+      list-style: none;
+      padding: 0;
+      margin: 0; }
+  .wrapper footer {
+    bottom: 0; }
+  .wrapper section {
+    float: right;
+    width: calc(100% - 270px - 30px);
+    padding: 30px;
+    margin-right: 30px;
+    padding-right: calc(100% - 270px - 800px); }
+    .wrapper section em {
+      font-family: "Helvetica Neue for IBM", Helvetica, Arial, sans-serif;
+      font-weight: 300; }
+    .wrapper section code, .wrapper section pre {
+      color: #323232;
+      font-size: 12px;
+      font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+      background-color: #F4F4F4; }
+    .wrapper section h1:first-child, .wrapper section h2:first-child, .wrapper section h3:first-child, .wrapper section h4:first-child {
+      margin-top: 0; }
+    .wrapper section h3, .wrapper section h4 {
+      font-family: "Helvetica Neue Roman for IBM", Helvetica, Arial, sans-serif;
+      font-weight: 400; }
+    .wrapper section img {
+      max-width: 100%;
+      margin: auto;
+      display: block; }
+      .wrapper section img[src$="#zoom=50%"] {
+        zoom: 50%; }
+    .wrapper section table {
+      width: 100%;
+      margin-bottom: 10px;
+      border-collapse: collapse; }
+      .wrapper section table thead {
+        display: table-header-group;
+        vertical-align: middle;
+        border-color: inherit; }
+      .wrapper section table tbody {
+        display: table-row-group;
+        vertical-align: middle;
+        border-color: inherit; }
+      .wrapper section table tr {
+        display: table-row;
+        vertical-align: inherit;
+        border-color: inherit; }
+      .wrapper section table th, .wrapper section table td {
+        text-align: left;
+        padding: 5px 0px 5px 15px;
+        border-bottom: 1px solid #e5e5e5; }
+      .wrapper section table th {
+        text-align: left;
+        background-color: #E0E0E0; }
+      .wrapper section table code {
+        padding: 0;
+        background-color: transparent; }
+  .wrapper:after {
+    content: "";
+    display: block;
+    clear: both; }
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+@media (max-width: 800px) {
+  html, body {
+    height: 100%; }
 
-        <p class="buttons">
-          <a class="btn-launch" href="https://eba.ibm.com">
-            Launch in Web
-          </a>
-          <a class="btn-download" href="https://ibm.box.com/shared/static/m7wm02x2qdevpacf2u1ugj6koapr37ta.dmg">
-            Download for Mac
-          </a>
-          <a href="https://slack.com/oauth/authorize?client_id=14390917878.401235455793&scope=bot,users.profile:read&redirect_uri=https%3a%2f%2feba.ibm.com%2fslack%2foauth">
-            <img alt="Add to Slack" height="40" width="139"
-                 src="https://platform.slack-edge.com/img/add_to_slack.png"
-                 srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" />
-          </a>
-        </p>
-        
-        <h2>Selected articles</h2>
-        <ul class="index">
-          <li data-level="0"><a href="/docs/getting-started/GettingStarted.html">Getting started</a></li>
-          <li data-level="0"><a href="/docs/LandingPage.html">Programming Watson Assistant</a></li>
-<!--           <li data-level="1"><a href="/docs/components/Ontology.html">Ontology</a></li> -->
-<!--           <li data-level="1"><a href="/docs/components/Patterns.html">Patterns</a></li> -->
-<!--           <li data-level="1"><a href="/docs/components/Actions.html">Actions</a></li> -->
-<!--           <li data-level="1"><a href="/docs/components/Rules.html">Rules</a></li> -->
-          <li data-level="0"><a href="/docs/articles/DebuggingWatsonAssistant.html">Debugging Watson Assistant</a></li>
-          <li data-level="0"><a href="/docs/articles/NaturalLanguageUnderstatnding.html">Natural language understanding</a></li>
-          <li data-level="0"><a href="/docs/Samples.html">Example agents</a></li>
-        </ul>
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%; }
+    .wrapper header, .wrapper footer, .wrapper section {
+      width: 100%;
+      height: auto;
+      float: none;
+      position: relative; }
+    .wrapper section {
+      flex-grow: 1; }
+    .wrapper header {
+      padding: 20px; }
+      .wrapper header h1 {
+        font-size: 20px;
+        line-height: 24px; }
+        .wrapper header h1 button {
+          display: block;
+          margin-left: 15px;
+          height: 24px; }
+          .wrapper header h1 button svg {
+            width: 24px;
+            height: 24px; }
+      .wrapper header h2 {
+        margin-top: 15px;
+        margin-bottom: 10px; }
+      .wrapper header:not(.opened) > *:first-child {
+        margin-bottom: 0; }
+      .wrapper header:not(.opened) > *:not(:first-child) {
+        display: none; }
+      .wrapper header .buttons {
+        display: none; }
+    .wrapper section {
+      padding: 20px; } }
 
-      </header>
-      <section>
-
-      {{ content }}
-
-      </section>
-      <footer>
-        {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-        <p><small>Hosted on GitHub Pages &mdash; Theme is based on minimal theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="{{ "/assets/js/youtube.js?v=" | append: site.github.build_revision | relative_url }}"></script>
-    <!--script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script-->
-    {% if site.google_analytics %}
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', '{{ site.google_analytics }}', 'auto');
-      ga('send', 'pageview');
-    </script>
-    {% endif %}
-    <script>
-      IBM_EBA_CONFIG = {
-        loading_delay: 1000,
-        disable_button: false,
-        disable_shadow: true
-      }
-    </script>
-    <script src="https://eba.ibm.com/static/assistant.js" defer></script>
-    <!--script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js" defer></script-->
-  </body>
-</html>
+/*# sourceMappingURL=style.css.map */
