--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,8 @@
     <div class="wrapper">
       <header>
         <h1>
-          <button class="btn btn-link" style="float:right" onclick="javascript:document.getElementsByTagName('header')[0].classList.toggle('opened')">
+          <a href="https://www.eba.ai/">Watson Embedded Business Assistant</a>
+          <button class="btn btn-link" onclick="javascript:document.getElementsByTagName('header')[0].classList.toggle('opened')">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                width="30px" height="30px" viewBox="0 0 30 30" style="enable-background:new 0 0 30 30;" xml:space="preserve">
             <style type="text/css">
@@ -31,7 +32,6 @@
             </g>
             </svg>
           </button>
-          <a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a>
         </h1>
         
         {% if site.logo %}
